# jetson-nano-log-agent

./: .gitignore  CLAUDE.md  Makefile  README.md  build_index.py  field_manual.md  gen_logs.py  launch.sh  pyproject.toml  run_agent.py
docs/: deployment_guide.md  field_manual.md  hardware_spec.md  known_issues.md
